--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Calendar</string>
+    <string name="input_your_name">输入你的称呼</string>
+    <string name="input_lovers_name">输入他/她的称呼</string>
+    <string name="select_date">选择开始日期</string>
+    <string name="button">完成</string>
 </resources>
